test/sematest/valid/null_assignment.java
class A {
  public static void main(String[] args) {
    A a = null;
    A[] b = null;
    A[][][][][][] c = null;
    c[0] = null;
  }
}