test/sematest/invalid/void_array.java
class A {
  public static void main(String[] args) {

  }

  public void[] run(){
    return null;
  }
}